--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Slabo+27px" rel="stylesheet">
     <meta charset="utf-8">
     <title>To Do App</title>
   </head>
